--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,70 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    {% if title %}
     <title>{{title}}</title>
+    {% else %}
+    <title>AKATSUKI</title>
+    {% endif %}
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+
+
+    </style>
+    <link href="{{url_for('static', filename='css/navbar.css')}}" rel="stylesheet">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">рандомное японское слово</a>
-    </nav>
-</header>
-<!-- Begin page content -->
-<main role="main" class="container">
-    {% block content %}{% endblock %}
-</main>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <div class="container">
+        <img src="{{url_for('static', filename='img/logo.png')}}" alt="" width="40" height="35"
+             class="d-inline-block align-text-top">
+        <a class="navbar-brand" href="{{url_for('index')}}">AKATSUKI</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{url_for('menu')}}">МЕНЮ</a>
+                </li>
+            </ul>
+
+            <div class=" nav-item dropdown">
+                {% if current_user.is_anonymous %}
+                <a href="{{url_for('login')}}">ВОЙТИ</a>
+                {% else %}
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ current_user.name }}</a>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                    <li><a class="dropdown-item" href="{{url_for('basket')}}">Корзина</a></li>
+                    <li><a class="dropdown-item" href="{{url_for('logout')}}">Выйти</a></li>
+                </ul>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    {% block app_content %}
+    {% endblock %}
+</div>
+<script src="{{url_for('static', filename='js/bootstrap.bundle.min.js')}}"></script>
 </body>
 </html>
