--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,69 @@
-{% extends "base.html" %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ВОЙТИ</title>
 
-{% block content %}
-<h1>Вход</h1>
-<form action="" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(class="form-control", type="email") }}<br>
-        {% for error in form.email.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(class="form-control", type="password") }}<br>
-        {% for error in form.password.errors %}
-            <p class="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
-</form>
-{% endblock %}
+
+    <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+    </style>
+    <link href="{{url_for('static', filename='css/login.css')}}" rel="stylesheet">
+</head>
+
+<body class="text-center">
+
+<main class="form-signin">
+    <form method="post">
+        {{ form.hidden_tag() }}
+        <img class="mb-4" src="{{url_for('static', filename='img/logo.png')}}" alt="" width="72" height="57">
+        <h1 class="h3 mb-3 fw-normal">ВХОД В АККАУНТ</h1>
+
+        <div class="form-floating">
+            {{ form.email(type="email", class="form-control", id="floatingInput", placeholder="name@example.com") }}
+            <label for="floatingInput">Email</label>
+        </div>
+        <div class="form-floating">
+            {{ form.password(type="password", class="form-control", id="floatingPassword", placeholder="Пароль") }}
+            <label for="floatingPassword">Пароль</label>
+        </div>
+
+        <div class="checkbox mb-3">
+            <label>
+                {{ form.remember_me() }}
+                {{form.remember_me.label() }}
+            </label>
+        </div>
+        {{ form.submit(class="w-100 btn btn-lg btn-primary", type="submit") }}
+        <br> <br> <br>
+        <div>Впервые здесь? <a href="{{ url_for('register') }}"> Зарегистрироваться</a></div>
+
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+    </form>
+</main>
+</body>
+</html>
